--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -3,27 +3,19 @@
 // Mobile Styling - Media Query
 
 .faq {
-    padding: 0.5rem 0 1.5rem 0;
+    padding: 0 0 0.5rem 0;
 }
 
 .faq h2 {
     margin-bottom: 0;
 }
 
-.faq .h2-side img {
-    transform: translateY(0.7rem) !important;
-}
-
 .faq h3, p {
     line-height: 26px;
 }
 
-.faq h3 {
-    margin-bottom: 0.5rem;
-}
-
 .faq p {
-    margin-bottom: 1rem;
+    margin: 1.75rem 0 1.75rem 0;
 }
 
 // Tablet Styling - Media Query
@@ -31,7 +23,7 @@
 @media screen and (min-width: 768px) {
 
     .faq {
-        padding: 0.5rem 0 2.5rem 0;
+        padding: 0.5rem 0 0.75rem 0;
     }
 
     .faq h2 {
@@ -39,12 +31,11 @@
     }
 
     .faq h3 {
-        margin-bottom: 0.5rem;
         font-size: 23px;
     }
 
     .faq p {
-        margin-bottom: 1rem;
+        margin: 1rem 0 1.85rem 0;
     }
 }
 
@@ -53,20 +44,21 @@
 @media screen and (min-width: 992px) {
 
     .faq {
-        padding: 1 0 2.5rem 0;
+        padding: 0.5rem 0 0 0;
     }
 
     .faq h3 {
-        font-size: 30px;
+        font-size: 26px;
     }
 
     .faq p {
-        font-size: 22.5px;
-        line-height: 45px;
+        font-size: 20px;
+        line-height: 40px;
+        margin: 1.5rem 0 2.5rem 0;
     }
 
     .faq .h2-side img {
-        transform: translateY(1rem) !important;
+        transform: translateY(-0.5rem);
     }
 }
 
@@ -75,7 +67,7 @@
 @media screen and (min-width: 1200px) {
 
     .faq {
-        padding: 1 0 2.5rem 0;
+        padding: 1rem 0 0.5rem 0;
     }
 
     .faq h3 {
@@ -86,10 +78,6 @@
         font-size: 22.5px;
         line-height: 45px;
     }
-
-    .faq .h2-side img {
-        transform: translateY(1rem) !important;
-    }
 }
 
 // Monitor Styling - Media Query
@@ -97,7 +85,7 @@
 @media screen and (min-width: 1920px) {
     
     .faq {
-        padding: 1rem 0 3rem 0;
+        padding: 1rem 0 0.5rem 0;
     }
 
     .faq h2 {
@@ -105,12 +93,16 @@
     }
 
     .faq h3 {
-        font-size: 35px;
+        font-size: 32px;
     }
 
     .faq p {
         font-size: 25px;
         line-height: 45px;
-        margin: 1.5rem 0 1.5rem 0;
+        margin: 1.75rem 0 3rem 0;
+    }
+
+    .faq .h2-side img {
+        transform: translateY(-0.75rem);
     }
 }
