--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -154,5 +154,10 @@ header {
 
     header {
         padding: 0 70px 0 70px;
+        height: 8rem;
+    }
+
+    #main_logo {
+        width: 10.5rem;
     }
 }   
