--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -59,7 +59,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 #feedback {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem 0 2.5rem 0;
 }
 
 // Tablet Styling - Media Query
@@ -102,7 +102,7 @@ input:focus, textarea:focus, select:focus {
     }
 
     #feedback {
-        margin-bottom: 2.25rem;
+        margin: 1rem 0 2.5rem 0;
     }
 }
 
@@ -119,7 +119,7 @@ input:focus, textarea:focus, select:focus {
     }
 
     #feedback {
-        margin-bottom: 2.5rem;
+        margin: 1.5rem 0 3rem 0;
     }
 }
 
@@ -136,7 +136,7 @@ input:focus, textarea:focus, select:focus {
     }
 
     #feedback {
-        margin-bottom: 2.5rem;
+        margin: 1.5rem 0 3.5rem 0;
     }
 }
 
@@ -153,6 +153,6 @@ input:focus, textarea:focus, select:focus {
     }
     
     #feedback {
-        margin-bottom: 3rem;
+        margin: 1.75rem 0 4rem 0;
     }
 }
